@@ -1,3 +1,7 @@
+TheMightyDude (18 August 2012)
+--------------------------------------
+Fixed Notice: Use of undefined constant LOG_ADMIN_PLANETCHEAT - assumed 'LOG_ADMIN_PLANETCHEAT' in planet_report_ce.php
+
 TheMightyDude (15 August 2012)
 --------------------------------------
 Fixed Notice: Use of undefined constant dev_escapepod - assumed 'dev_escapepod' in combat.php
